--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development # Change to "production" when deploying
 
 # Backend configaration
 PORT=5000
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://sai:sai@cluster0.5orxunn.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET= "jhajjajjh77841kaa"
 JWT_EXPIRE=24 # In hours
 
